# f1-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  __init__.py  bot.py  config.ini  docker-compose.yml  example.config.ini  example_config.ini  flushcache.py  main.py  pyproject.toml  requirements.txt  update.py
data/: drivers.json  drivers_old.json
f1/: admin.py  api.py  bot.py  commands.py  config.py  data.py  errors.py  f1.py  fetch.py  options.py  target.py  utils.py
f1/api/: ergast.py  fetch.py  stats.py
f1/cogs/: admin.py  plot.py  race.py  season.py
f1/stats/: chart.py  plot.py
f1/tests/: async_test.py  test_data.py
f1/tests/mock_response/: models.py  response.py
src/: bot.py  f1.py  fetch.py
